# purescript-graphql-schema-gen

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  outside_types.yaml  outside_types_in_actions.yaml  roles.yaml  spago_workspace_config.yaml
purs/: .gitignore  package.json  pnpm-lock.yaml  spago.yaml
purs/app/: spago.yaml
purs/app/src/: Go.purs
purs/src/: CertificateId.purs  CertificateRecipientId.purs  CertificateRecipientListId.purs  ClientRegionActionInput.purs  EventId.purs  TrialStatus.purs  UserId.purs
src/: build_schema.rs  config.rs  enums.rs  generate_enum.rs  hasura_types.rs  main.rs  main_check_needs_migrations.rs  outside_types.rs  parse_outside_types.rs  parse_roles.rs  postgres_types.rs  purescript_argument.rs  purescript_enum.rs  purescript_gen.rs  purescript_import.rs  purescript_record.rs  purescript_type.rs  write.rs
src/config/: parse_outside_types.rs  parse_roles.rs  workspace.rs
src/enums/: generate_enum.rs  postgres_types.rs
src/purescript_gen/: purescript_argument.rs  purescript_enum.rs  purescript_import.rs  purescript_instance.rs  purescript_print_module.rs  purescript_record.rs  purescript_type.rs  purescript_variant.rs
