[package]
name = "rust-purs-gql"
version = "0.1.4"
edition = "2021"
default-run = "pursgql"
repository = "https://github.com/OxfordAbstracts/purescript-graphql-schema-gen"

[dependencies]
cynic = { version = "3.8.0", features = ["http-reqwest", "http-reqwest-blocking"] }
cynic-introspection = "3.8.0"
dotenv = "0.15.0"
futures = "0.3.30"
hashlink = "0.8.4"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = "0.12.7"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
stringcase = "0.3.0"
tokio = { version = "1.40.0", features = ["full"] }
yaml-rust2 = "0.8.1"
serde_json = "1.0"

[[bin]]
edition = "2021"
name = "pursgql"
path = "src/main.rs"

[[bin]]
edition = "2021"
name = "check_migrations"
path = "src/main_check_needs_migrations.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# A namespace to use when publishing this package to the npm registry
npm-scope = "@oxfordabstracts"
# Publish jobs to run in CI
publish-jobs = ["npm"]
